+ overflox-x to body to fix sideways scroll on mobile

--- a/sarasa/sarasa.css
+++ b/sarasa/sarasa.css
@@ -70,7 +70,10 @@ html
     background-color: #343233;
     background-color: var(--dark);
     margin: 0; padding: 0;
-    overflow-x: hidden
+}
+
+html, body {
+    overflow-x: hidden;
 }
 
 /* main, header {
